<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agree_read">我已阅读并同意</string>
    <string name="user_agreement">《隐私服务协议》</string>
    <string name="block_chain_wallet">区块链账户</string>
    <string name="my_create_wallet">创建账户</string>
    <string name="my_import_wallet">导入账户</string>
    <string name="my_wallet_read_toast">请先勾选协议</string>
    <string name="wallet_name">钱包名称</string>
    <string name="my_set_password_toast">请输入8–16位数字、字母组合</string>
    <string name="set_wallet_password">请设置账户密码</string>
    <string name="my_set_password_different">两次密码不相同！</string>
    <string name="confirm_wallet_password">确认账户密码</string>
    <string name="my_import_start">开始导入</string>
    <string name="import_wallet_hint0">请输入助记词，用空格分隔</string>
    <string name="import_wallet_tips">账户支持导入所有遵循BIP标准生成的助记词</string>
    <string name="import_wallet_chain_name">主链:</string>
    <string name="my_wallet_detail_choose_chain">选择主链</string>
    <string name="import_wallet_hint1">请输入私钥或扫描私钥生成的二维码录入</string>
    <string name="import_wallet_hint2">请输入地址或扫描地址生成的二维码录入</string>
    <string name="import_wallet_wallet_name">账户</string>
    <string name="my_scan">扫一扫</string>
    <string name="please_input_mnem">请输入助记词</string>
    <string name="please_input_prikey">请输入私钥</string>
    <string name="my_wallet_detail_name">请输入账户名称</string>
    <string name="my_wallet_detail_name_exist">账户名称重复</string>
    <string name="my_wallet_detail_password">请输入账户密码</string>
    <string name="my_wallet_set_password">请输入密码</string>
    <string name="my_change_password_again">请再次输入新密码</string>
    <string name="my_create_letter">请输入8–16位字符</string>
    <string name="my_set_password_number_letter">请输入数字和字母组合</string>
    <string name="my_import_success">导入成功</string>
    <string name="my_import_backup_none">助记词不存在！</string>
    <string name="import_wallet_mnem_repeat">助记词重复！</string>
    <string name="my_create_name">设置账户名称</string>
    <string name="my_wallet_password_tips">请输入密码</string>
    <string name="my_wallet_confirm_password_tips">请重新输入密码</string>
    <string name="backup_mnemonic">备份助记词</string>
    <string name="create_mnemonic_hint">请务必妥善保存助记词，确定之后将进行校验。</string>
    <string name="common_null">--</string>
    <string name="create_mnemonic_toast">提示：请勿直接截图保存，避免被恶意软件截取！\n如果有人获取你的助记词将直接获取您的资产！\n\n正确做法：\n方式一：使用另一离线设备，拍照保存。\n方式二：正确抄写助记词，存放在安全的地方。\n\n点击［开始备份］后，需要对你记住的助记词进行校验。</string>
    <string name="create_mnemonic_change">更换助记词</string>
    <string name="start_back_up">开始备份</string>
    <string name="validate_mnemonic">验证您备份的助记词</string>
    <string name="backup_order">请按照正确的顺序点击每个单词</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="mnemonic_wrong">助记词不正确</string>
    <string name="backup_success">助记词备份成功</string>
    <string name="downloading">加载中…</string>
    <string name="state_reloading">重新加载</string>
    <string name="my_wallet_detail_delete">删除账户</string>
    <string name="my_wallet_detail_export">导出私钥</string>
    <string name="export_pub">导出公钥</string>
    <string name="my_wallet_detail_out_mnem">导出助记词</string>
    <string name="my_wallet_detail_update_name">修改账户名称</string>
    <string name="change_password">修改密码</string>
    <string name="my_wallet_forget_password">忘记密码</string>
    <string name="title_wallet_details">账户设置</string>
    <string name="my_wallet_modified_success">修改成功</string>
    <string name="my_wallet_detail_modify_name">修改名称</string>
    <string name="my_version_toast_title">更新提示</string>
    <string name="my_version_toast">检测到新版本，是否更新</string>
    <string name="my_wallet_detail_safe">安全警告</string>
    <string name="my_wallet_detail_delete_message">删除账户仅能通过助记词和私钥找回，是否确定删除该账户</string>
    <string name="home_choose_chain">选择</string>
    <string name="my_wallet_detail_wrong_password">密码输入错误</string>
    <string name="my_wallet_detail_mnem">查看助记词</string>
    <string name="export_mnem_tip">请将助记词安全保管，离线保存，建议手工抄写</string>
    <string name="string_check_mnem">开始校验</string>
    <string name="title_set_pwd">设置密码</string>
    <string name="my_set_password">密码设置成功!</string>
    <string name="my_change_password_wrong">旧密码错误</string>
    <string name="my_change_password_same">与旧密码相同</string>
    <string name="my_change_password_old">请输入旧密码</string>
    <string name="my_change_password_new">请输入新密码</string>
    <string name="my_change_password_success">密码修改成功!</string>
    <string name="per_upload">权限申请</string>
    <string name="my_scan_toast">请将镜头对准二维码进行扫描</string>
    <string name="my_scan_image">相册</string>
    <string name="home_scan_toast">为了您能够正常使用扫一扫功能，需要获得相机和文件存储权限！</string>
    <string name="config_code">请放大二维码后重试</string>
    <string name="qrcode_error">二维码识别失败，请端正相机重新扫描！</string>
    <string name="qrcode_success_sign">扫码完成,请去签名</string>
    <string name="my_wallets_chose1">创建/导入</string>
    <string name="my_wallets_chose2">观察账户</string>
    <string name="my_wallets_current_wallet">当前账户</string>
    <string name="my_wallets_mnem_walllet">助记词账户</string>
    <string name="my_wallet_detail_open_finger_pay">开启免密支付</string>
    <string name="home_empty">暂无资产，快去添加吧</string>
    <string name="equal">≈</string>
    <string name="cny">¥</string>
    <string name="home_transfer">转账</string>
    <string name="home_receipt">收款</string>
    <string name="trans_all">全部</string>
    <string name="home_transaction_record">交易记录</string>
    <string name="home_receipt_address">收款地址</string>
    <string name="in_universal">通用</string>
    <string name="in_exclusive">专属</string>
    <string name="in_common_tip">适用于所有账户收款</string>
    <string name="in_bi_tip">仅适用于%1$s收款</string>
    <string name="in_set_money">指定金额</string>
    <string name="home_label_balance">余额:</string>
    <string name="home_btc_transfer">BTC转账</string>
    <string name="in_share_address_tip">账户地址</string>
    <string name="home_receipt_currency_address">收款方</string>
    <string name="home_send_number">发送数量</string>
    <string name="home_hint_please_input_count">请输入数量</string>
    <string name="home_miner_fee">矿工费</string>
    <string name="home_slow">慢</string>
    <string name="home_fast">快</string>
    <string name="home_optional">（选填）</string>
    <string name="home_optimum">最佳</string>
    <string name="home_chain_remarks">上链备注</string>
    <string name="home_local_remarks">本地备注</string>
    <string name="home_confirm_transfer_currency">确认转账</string>
    <string name="home_receipt_currency">收款</string>
    <string name="in_p_in">请转入</string>
    <string name="in_p_amount">请输入数量</string>
    <string name="in_r_money">修改金额</string>
    <string name="home_balance">余额:%1$s%2$s</string>
    <string name="transaction_time">交易时间</string>
    <string name="chain_remarks_tips">上链备注：信息上链，可以在链上查询</string>
    <string name="local_remarks_tips">本地备注：信息不上链，保存在本地</string>
    <string name="text_tips">知道了</string>
    <string name="home_please_input_receipt_address">请输入收款地址</string>
    <string name="home_please_input_amount">请输入金额</string>
    <string name="home_receipt_send_address_is_same">收款地址和转账地址相同</string>
    <string name="home_receipt_address_is_illegal">收款地址格式不正确</string>
    <string name="home_input_greater_than_zero_amount">请输入大于0的金额</string>
    <string name="home_balance_insufficient">余额不足...</string>
    <string name="fee_not_enough">矿工费余额不足</string>
    <string name="home_confirm">确定</string>
    <string name="home_pwd_input_error">密码输入错误</string>
    <string name="home_transaction_fails">失败</string>
    <string name="home_confirming">确认中</string>
    <string name="home_transaction_success">完成</string>
    <string name="capture_no_coin">请添加对应币种</string>
    <string name="home_transfer_currency_fails">获取结果失败，请至区块链浏览器查看</string>
    <string name="out_result_fails">解析结果失败，请至区块链浏览器查看</string>
    <string name="home_transfer_currency_success">操作完成</string>
    <string name="home_transfer_address">转账地址</string>
    <string name="home_no">无</string>
    <string name="home_block_info">区块信息</string>
    <string name="home_transaction_hash">交易哈希</string>
    <string name="title_transaction_details">交易详情</string>
    <string name="my_wallet_search_coin">输入Token名称或合约地址</string>
    <string name="tip_notfound_coin">抱歉，未能找到相关币种</string>
    <string name="tip_search_coin">请输入Token名称或合约地址，如果没有找到您 要添加的币种，请向我们提交反馈。</string>
    <string name="my_about_us_feedback">反馈建议</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="add_coin_tab_one">首页</string>
    <string name="input_password">账户密码</string>
    <string name="rsp_dialog_input_password">请输入账户密码</string>
    <string name="label_exchange">闪兑</string>
    <string name="update_cancel">暂不更新</string>
    <string name="update_ok">更新</string>
    <string name="wallet_mnem">助记词账户</string>
    <string name="wallet_priv">私钥账户</string>
    <string name="wallet_recover">找回账户</string>
    <string name="bind_recover">绑定找回钱包</string>
    <string name="revover_str">找回资产</string>
    <string name="backup_mnem_str">创建助记词钱包</string>
    <string name="backup_recover_str">创建找回钱包</string>
    <string name="imp_mnem_str">导入助记词</string>
    <string name="imp_priv_str">导入私钥</string>
    <string name="imp_addr_str">导入观察账户</string>
    <string name="imp_recover_str">导入找回钱包</string>
    <string name="choose_chain_str">选择主链</string>
    <string name="recover_input_priv_str">请输入控制地址的私钥</string>
    <string name="recover_addr_str">请输入找回地址</string>
    <string name="new_recover_str">设置找回参数</string>
    <string name="rec_addr">控制地址</string>
    <string name="yue">余额</string>
    <string name="user_back_pub">用户备份公钥</string>
    <string name="input_back_pub">请输入备份地址对应的公钥</string>
    <string name="off_pub">mydao官方备份公钥</string>
    <string name="input_re_email">请输入找回邮箱</string>
    <string name="recover_time_set">找回时间设置</string>
    <string name="day7">7天</string>
    <string name="day30">30天</string>
    <string name="day90">90天</string>
    <string name="new_create">创建钱包</string>
    <string name="choose_re">选择币种</string>
    <string name="input_re_count">请输入找回的数量</string>
    <string name="input_in_addr">请输入收款地址</string>
    <string name="input_re_addr">请输入找回钱包的地址</string>
    <string name="re_asset">找回我的资产</string>
    <string name="do_back_sign">请使用备份钱包扫码签名</string>
    <string name="check_mnem">校验助记词</string>
    <string name="update_ver_str">版本更新</string>
    <string name="up_new_str">当前已是最新版本</string>
    <string name="create_wallet_pre">请先创建钱包</string>
    <string name="pwd_fail_str">密码错误</string>
    <string name="my_search">搜索</string>
    <string name="delete">删除</string>
    <string name="o_delete">确认删除</string>
    <string name="title_contacts">联系人</string>
    <string name="my_contact">联系人</string>
    <string name="my_message">消息中心</string>
    <string name="my_contact_add">添加联系人</string>
    <string name="title_edit_contacts">编辑联系人</string>
    <string name="title_contacts_details">联系人详情</string>
    <string name="contacts_save">保存</string>
    <string name="my_contact_toast">搜不到该联系人哦</string>
    <string name="my_contact_nickname">昵称</string>
    <string name="my_contact_phone">手机号</string>
    <string name="my_contact_address">地址</string>
    <string name="my_contact_go">去转账</string>
    <string name="my_contact_scan">扫描二维码或输入地址</string>
    <string name="my_contact_scan_invalid">无效地址！</string>
    <string name="speed_up_str">加速交易</string>
    <string name="p_input_fee_str">请输入矿工费</string>
    <string name="next_st">下一步</string>
    <string name="m_tip1">点击下一步，将看到钱包的助记词，请谨记以下安全点</string>
    <string name="m_tip2">如果我弄丢了助记词，我的资产将永远丢失</string>
    <string name="m_tip3">如果我向任何人透露或分享我的助记词，我的资产可能会被盗</string>
    <string name="m_tip4">保护好助记词的安全的责任全部在于我</string>
</resources>