<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bg_top_radius">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/speed_up_str"
        android:textColor="@color/gray_349"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:paddingLeft="15dp"
        android:paddingTop="20dp"
        android:paddingRight="15dp"
        android:text="@string/cancel"
        android:textColor="#808080"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="42dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_fee_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/ic_question"
                android:drawablePadding="6dp"
                android:text="@string/home_miner_fee"
                android:textColor="@color/gray_349"
                android:textSize="15sp" />


        </LinearLayout>


        <EditText
            android:id="@+id/et_fee"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray_f8"
            android:drawableRight="@mipmap/ic_eth"
            android:drawablePadding="9dp"
            android:paddingRight="10dp"
            android:hint="@string/p_input_fee_str"
            android:paddingLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/input_password"
            android:textColor="@color/gray_349"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray_f8"
            android:hint="@string/rsp_dialog_input_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="10dp" />


        <Button
            android:id="@+id/btn_ok"
            style="@style/buttonPressStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/ok"
            android:textColor="@android:color/white" />


    </LinearLayout>

</RelativeLayout>