<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f8f8fa"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:drawableRight="@mipmap/icon_right_wallet"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:text="@string/my_wallet_forget_password"
            android:textColor="@color/gray_349"
            android:textSize="@dimen/sp_16"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_update_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:drawableRight="@mipmap/icon_right_wallet"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:text="@string/change_password"
            android:textColor="@color/gray_349"
            android:textSize="@dimen/sp_16" />


        <TextView
            android:id="@+id/tv_update_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:drawableRight="@mipmap/icon_right_wallet"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:text="@string/my_wallet_detail_update_name"
            android:textColor="@color/gray_349"
            android:textSize="@dimen/sp_16" />


        <LinearLayout
            android:id="@+id/ll_finger_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/my_wallet_detail_open_finger_pay"
                android:textColor="@color/gray_349"
                android:textSize="16sp" />


            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/switch_finger_pay"
                style="@style/SwitchButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="12dp"
                app:kswThumbMargin="-3dp"
                app:kswThumbWidth="20dp"
                app:kswTintColor="#7190ff" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_out_mnem"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:drawableRight="@mipmap/icon_right_wallet"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:text="@string/my_wallet_detail_out_mnem"
            android:textColor="@color/gray_349"
            android:textSize="@dimen/sp_16" />


        <TextView
            android:id="@+id/tv_out_priv"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:drawableRight="@mipmap/icon_right_wallet"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:text="@string/my_wallet_detail_export"
            android:textColor="@color/gray_349"
            android:textSize="@dimen/sp_16" />


        <TextView
            android:id="@+id/tv_out_pub"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:drawableRight="@mipmap/icon_right_wallet"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:text="@string/export_pub"
            android:textColor="@color/gray_349"
            android:textSize="@dimen/sp_16" />


        <TextView
            android:id="@+id/tv_new_recover_address"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:drawableRight="@mipmap/icon_right_wallet"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:text="@string/bind_recover"
            android:textColor="@color/gray_349"
            android:textSize="@dimen/sp_16" />


        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="140dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="31dp"
            android:background="@drawable/my_wallet_detail_delete"
            android:gravity="center"
            android:text="@string/my_wallet_detail_delete"
            android:textColor="@color/color_cc3939"
            android:textSize="16sp" />


    </LinearLayout>
</RelativeLayout>