<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:lineSpacingMultiplier="1.2"
        android:padding="20dp"
        android:text="@string/m_tip1"
        android:textColor="@color/gray_33"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_tip1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_fee"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/m_tip2"
            android:textColor="@color/gray_33"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_tip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:button="@drawable/radio_check"
            android:checked="false"
            android:clickable="false"
            android:paddingEnd="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tip2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_fee"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/m_tip3"
            android:textColor="@color/gray_33"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_tip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:button="@drawable/radio_check"
            android:checked="false"
            android:clickable="false"
            android:paddingEnd="5dp"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tip3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_fee"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/m_tip4"
            android:textColor="@color/gray_33"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_tip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:button="@drawable/radio_check"
            android:checked="false"
            android:clickable="false"
            android:paddingEnd="5dp"
            android:text="" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_import_wallet_button_ok"
        android:gravity="center"
        android:text="@string/next_st"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>