<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseTitleLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            style="@style/CustomTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:overScrollMode="always"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="195dp"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_name"
                    android:textColor="#ff8e92a3"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_wallet_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:maxLength="16"
                    android:textColor="#ff333649"
                    android:textSize="16sp"
                    tools:text="账户1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#D9DCE9" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_password_tip"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="bottom"
                        android:text="@string/my_set_password_toast"
                        android:textColor="#ff8e92a3"
                        android:textSize="14sp"
                        android:visibility="invisible" />

                    <EditText
                        android:id="@+id/et_wallet_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="2dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/set_wallet_password"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:textColor="#ff333649"
                        android:textColorHint="#8E92A3"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="#D9DCE9" />

                    <TextView
                        android:id="@+id/tv_password_again_tip"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="bottom"
                        android:text="@string/my_set_password_different"
                        android:textColor="#ff8e92a3"
                        android:textSize="14sp"
                        android:visibility="invisible" />

                    <EditText
                        android:id="@+id/et_wallet_password_again"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="2dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/confirm_wallet_password"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:textColor="#ff333649"
                        android:textColorHint="#8E92A3"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="#D9DCE9" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_import"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_import_wallet_button_ok"
            android:gravity="center"
            android:text="@string/my_import_start"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>
</RelativeLayout>
